[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/background.jpg" type="Texture" id=5]
[ext_resource path="res://dodge_assets/art/house_in_a_forest_loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/art/game-over.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.388153, -1.26666, 0, 0, 0, 0, 478.932, -1.26666, 0, 0, 0, 0, 479.876, 719.853, 0, 0, 0, 0, 0.388153, 719.853, 0, 0, 0, 0, 0.388153, -1.26666 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.0470588, 0, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_top = -1.26666
margin_right = 5574.0
margin_bottom = 3998.73
rect_scale = Vector2( 0.0860937, 0.18056 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartDelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.388153, -1.26666 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 1.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartDelayTimer" to="." method="_on_StartDelayTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
